*Empty MediaWiki Message*

--- a/Gerzmava_Hibla.mw
+++ b/Gerzmava_Hibla.mw
@@ -2,7 +2,7 @@
 | изображение = Hibla Gerzmava M2017-05.jpg
 | описание изображения = Hibla Gerzmava vn 2017 semendkus
 }}
-'''Hibla Levarsovna Gerzmava''' ({{lang-ab|Хьыбла Леуарса-иҧҳа Гьырзмаа}}, {{lang-ru|Хибла Леварсовна Герзмава}}; sünd. [[6. uhoku]] [[1970]], [[Picund]], [[Abhazii|Abhazijan ANST]], [[Gruzii|Gruzijan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Abhazii|abhazijalaine]] da [[Venäma|venämalaine]] operpajatai ([[soprano]]). [[Venälaižen Federacijan rahvahan artist]] (2012). Venälaižen Federacijan valdkundpremijan laureat (2021).
+'''Hibla Levarsovna Gerzmava''' ({{lang-ab|Хьыбла Леуарса-иҧҳа Гьырзмаа}}, {{lang-ru|Хибла Леварсовна Герзмава}}; sünd. [[6. viluku]] [[1970]], [[Picund]], [[Abhazii|Abhazijan ANST]], [[Gruzii|Gruzijan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Abhazii|abhazijalaine]] da [[Venäma|venämalaine]] operpajatai ([[soprano]]). [[Venälaižen Federacijan rahvahan artist]] (2012). Venälaižen Federacijan valdkundpremijan laureat (2021).
 
 Naine openui [[Moskv]]an valdkundaližes konservatorijas Čaikovskijan nimed vll 1989−1994. Hän om pään' Moskvan muzikaližes teatras Stanislavskijan i Nemirovič-Dančenkon nimed vspäi 1995, ühtneb sen äjihe lavastusihe. Gastroliruib mail'madme paksus. Erasti edestab rahvahanpajoid kodikelel-ki.
 
