--- a/Evrejan_kel'.mw
+++ b/Evrejan_kel'.mw
@@ -2,9 +2,9 @@
 [[Fail:Alphabet Hebrew.svg|thumb|right|200px|Kelen kirjamišt]]
 '''Evrejan kel'''' vai '''ivrit''' (ičeze nimituz: עברית ''ivrit'' [ʔivˈʁit] vai [ʕivˈɾit]) om üks' [[afroazijalaižed keled|afroazijalaižiš]], [[semitižed keled|semitižiš]] kelišpäi.
 
-Om ühteks [[Izrail'|Izrailin]] valdkundkelišpäi.
+Kel' om [[Izrail'|Izrailin]] ühteks kahtes valdkundkelespäi. Ivritan amuine form ([[amuiževrejan kel']]) om [[judaizm]]an veroline i pühä kel'. Nügüd'aigaine evrejan kel' om udessündutadud i adaptiruidud Izrail'-valdkundan oficialižeks da paginkeleks 20. voz'sadal. Kelen reguliruindorganizacii om Ivrit-kelen akademii ([[Jerusalim]]), se om sätud vl 1953 parlamentan käskusen mödhe.
 
-Pagižijoiden lugu om läz 9 millionad ristituid, heišpäi 5 mln elädas Izrailiš (2016).
+Pagižijoiden lugu om läz 9 millionad ristituid, heišpäi 5 mln elädas Izrailiš (2016). Kävutase evrejan kundoiš mail'madme.
 
 == Homaičendad ==
 <references />
