--- a/Evrejan_kel'.mw
+++ b/Evrejan_kel'.mw
@@ -1,10 +1,15 @@
 {{1000}}{{A10000}}
 [[Fail:Alphabet Hebrew.svg|thumb|right|200px|Kelen kirjamišt]]
-'''Evrejan kel'''' vai '''ivrit''' (ičeze nimituz: עברית ''ivrit'' [ʔivˈʁit] vai [ʕivˈɾit]) om üks' [[afroazijalaižed keled|afroazijalaižiš]], [[semitižed keled|semitižiš]] kelišpäi.
-
-Kel' om [[Izrail'|Izrailin]] ühteks kahtes valdkundkelespäi. Ivritan amuine form ([[amuiževrejan kel']]) om [[judaizm]]an veroline i pühä kel'. Nügüd'aigaine evrejan kel' om udessündutadud i adaptiruidud Izrail'-valdkundan oficialižeks da paginkeleks 20. voz'sadal. Kelen reguliruindorganizacii om Ivrit-kelen akademii ([[Jerusalim]]), se om sätud vl 1953 parlamentan käskusen mödhe.
+'''Evrejan kel'''' vai '''ivrit''' (ičeze nimituz: עברית ''ivrit'' [ʔivˈʁit] vai [ʕivˈɾit]) om üks' [[afroazijalaižed keled|afroazijalaižiš]], [[semitižed keled|semitižiš]] kelišpäi, [[evrejalaižed|evrejalaižiden]] kel'.
 
 Pagižijoiden lugu om läz 9 millionad ristituid, heišpäi 5 mln elädas Izrailiš (2016). Kävutase evrejan kundoiš mail'madme.
+
+Kel' om [[Izrail'|Izrailin]] ühteks kahtes valdkundkelespäi.
+
+== Istorii ==
+Ivritan amuine form ([[amuiževrejan kel']]) om [[judaizm]]an veroline i pühä kel'. Se kändihe erigoittud keleks 13.-7. voz'sadoil EME, om kaičenus äi kirjutadud dokumentoid, niišpäi päižed oma jumalanradnikoičendan kirjad ([[Tora (kirj)|Toran]] i [[Biblii|Biblijan]] palad). Zavotten 2. voz'sadaspäi meiden erad amuine ivrit jäi jumalanradnikoičendan keleks päpaloin. Evrejalaižed pagižiba verhil kelil kahesatoštkümne voz'sadad. Keskaigan evrejan kelen severz'-se sijaližid formid om šingotanus Evropas.
+
+Nügüd'aigaine evrejan kel' om udessündutadud i adaptiruidud Izrail'-valdkundan oficialižeks da paginkeleks 20. voz'sadal. Kelen reguliruindorganizacii om Ivrit-kelen akademii (‏הָאָקָדֶמְיָה לַלָּשׁוֹן הָעִבְרִית‏‎ ''ha-Akademia la-lašon ha-ivrit''), sijadase [[Jerusalim]]as, om sätud vl 1953 parlamentan käskusen mödhe.
 
 == Homaičendad ==
 <references />
