--- a/Taradaikin_Igor'.mw
+++ b/Taradaikin_Igor'.mw
@@ -1,6 +1,8 @@
 {{Personalii}}
 '''Igor' Georgijevič Taradaikin''' ({{lang-ru|Игорь Георгиевич Тарадайкин}}; sünd. [[28. sügüz'ku]] [[1957]], [[Rostov Donal]], [[Rostovan agj]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om nevondkundaline i [[Venäma|venämalaine]] kinon da dubläžan akt'or.
 
+Mez' om [[VGIK|VGIK:an]] pästnikaks vspäi 1982. Vändab rolid fil'miš vspäi 1981, nevondkundaližen aigan radoi Ukrainan kinostudijoiš. Ühtneb verazmaižiden fil'miden i TV-serialiden änetoitandha Venäman televizijan kanaloiden täht. Taradaikinan än' om pehmed da intelligentine. Änetoiti kompjutervändoiden personažiden riven vspäi 2017.
+
 == Homaičendad ==
 <references/>
 
