--- a/Taradaikin_Igor'.mw
+++ b/Taradaikin_Igor'.mw
@@ -3,6 +3,27 @@
 
 Mez' om [[VGIK|VGIK:an]] pästnikaks vspäi 1982. Vändab rolid fil'miš vspäi 1981, nevondkundaližen aigan radoi Ukrainan kinostudijoiš. Ühtneb verazmaižiden fil'miden i TV-serialiden änetoitandha Venäman televizijan kanaloiden täht. Taradaikinan än' om pehmed da intelligentine. Änetoiti kompjutervändoiden personažiden riven vspäi 2017.
 
+== Rolid fil'miš ==
+* «Vasilii i Vasilisa» (1981) — ''Ivan Dmitrijevič''
+* «Pidatimiden praznik» (1982, lühüdpiduzline) — ''nevondkundaline oficer''
+* «Bukl'» (1983) — ''Timko Vihora''
+* «Oluhad» (1985) — ''Stepan''
+* «Napri jäda elegiš» (1986) — ''Jeremejev''
+* «Kezaližed jal'ged muštos Z-planetan polhe» (1986) — ''Kapustin''
+* «Džamaik» (1987) — ''todištai''
+* «Kuldaine sai» (1987) — ''Klim Danilovič Danik norudes''
+* «Pühäpäiv, seičemenden časun pol'» (1988) — ''Leonid Ivakin, Ritan vell'''
+* «Štormvarutuz» (1988) — ''Matvei Nikolajevič Liholat, kombinatan partorg''
+* «Soda päivlaskmaižel čuradusel» (1990) — ''vanhemb Kolodäžnii-leitnant''
+* «Kop» (1990) — ''Sen'ka-vagzal-vargaskurik''
+* «Ioann-edelpainajan avoinuded meled» (1991) — ''Kuz'ma Jepifanov''
+* «Rikond Ždanovskail» (1992) — ''vanhemb Nikolai Guščin-leitnant''
+* «Unohtamatomuden änikod» (1994) — ''Jelizaveta Sergejevnan kolnu mužik''
+* «Kaks' ozahuded 2» (2005, serial) — ''Nazar Rudenko''
+* «Ehtatuz» (2009) — ''saldat''
+* «22 minutad» (2013) — ''Vaganov, laivišton admiral, sodamerivägiden päkäsknik''
+* «Kazanovan mel'heižed naižed» (2014) — ''Valera-avtomehanikanradnik''
+
 == Homaičendad ==
 <references/>
 
