--- a/Taradaikin_Igor'.mw
+++ b/Taradaikin_Igor'.mw
@@ -19,7 +19,7 @@ Mez' om [[VGIK|VGIK:an]] pästnikaks vspäi 1982. Vändab rolid fil'miš vspäi 
 * «Ioann-edelpainajan avoinuded meled» (1991) — ''Kuz'ma Jepifanov''
 * «Rikond Ždanovskail» (1992) — ''vanhemb Nikolai Guščin-leitnant''
 * «Unohtamatomuden änikod» (1994) — ''Jelizaveta Sergejevnan kolnu mužik''
-* «Kaks' ozahuded 2» (2005, serial) — ''Nazar Rudenko''
+* «Kaks' ozahut 2» (2005, serial) — ''Nazar Rudenko''
 * «Ehtatuz» (2009) — ''saldat''
 * «22 minutad» (2013) — ''Vaganov, laivišton admiral, sodamerivägiden päkäsknik''
 * «Kazanovan mel'heižed naižed» (2014) — ''Valera-avtomehanikanradnik''
