--- a/.nl.mw
+++ b/.nl.mw
@@ -1,4 +1,6 @@
-'''.nl''' om [[Alamad|Alamaiden]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 25. päiväl sulakud.<ref>[http://iana.org/domains/root/db/nl.html IANA — .nl Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.nl''' om [[Alamad|Alamaiden]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 25. päiväl sulakud<ref>[http://iana.org/domains/root/db/nl.html IANA — .nl Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vl 2020 domennimiden lugu ületi 6 millionad.
+
+Domennimen registracii maksab 10..15 evrod. Kahtenden tazopindan domenan registracii om lasktud, sidä kesken personoile (vspäi 2003). Kaikutte domennimi tarbhaičeb eziaugušt DNS-serverad i hot' üht sekundarišt.
 
 == Homaičendad ==
 <references />
