--- a/.nl.mw
+++ b/.nl.mw
@@ -2,6 +2,8 @@
 
 Domennimen registracii maksab 10..15 evrod. Kahtenden tazopindan domenan registracii om lasktud, sidä kesken personoile (vspäi 2003). Kaikutte domennimi tarbhaičeb eziaugušt DNS-serverad i hot' üht sekundarišt.
 
+Organizacii Alamaiden internetdomenoiden registracijas ({{lang-nl|Stichting Internet Domeinregistratie Nederland}}, ''SIDN'') ohjandab processal kesknikoiden verkon kal't.
+
 == Homaičendad ==
 <references />
 
