--- a/.nl.mw
+++ b/.nl.mw
@@ -1,6 +1,7 @@
-'''.nl''' om [[Alamad|Alamaiden]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 25. päiväl sulakud<ref>[http://iana.org/domains/root/db/nl.html IANA — .nl Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vl 2020 domennimiden lugu ületi 6 millionad.
+[[Fail:DotNL domain logo.png|thumb|right|250px|Domenan logotip]]
+'''.nl''' om [[Alamad|Alamaiden]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 25. päiväl sulakud<ref>[http://iana.org/domains/root/db/nl.html IANA — .nl Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2020 sügüz'kus domennimiden lugu ületi 6 millionad.
 
-Domennimen registracii maksab 10..15 evrod. Kahtenden tazopindan domenan registracii om lasktud, sidä kesken personoile (vspäi 2003). Kaikutte domennimi tarbhaičeb eziaugušt DNS-serverad i hot' üht sekundarišt.
+Domennimen registracii maksab 10..15 evrod. Kahtenden tazopindan domenan registracii om lasktud, sidä kesken personoile (vspäi 2003), ei ole oficialižid domenoid sil tazopindal. Kaikutte domennimi tarbhaičeb eziaugušt DNS-serverad i hot' üht sekundarišt.
 
 Organizacii Alamaiden internetdomenoiden registracijas ({{lang-nl|Stichting Internet Domeinregistratie Nederland}}, ''SIDN'') ohjandab processal kesknikoiden verkon kal't.
 
@@ -8,7 +9,7 @@ Organizacii Alamaiden internetdomenoiden registracijas ({{lang-nl|Stichting Inte
 <references />
 
 == Irdkosketused ==
-* [http://www.sidn.nl/ Domenan registrirui sait (''sidn.nl'')] {{ref-nl}} {{ref-en}}, ohjandai om ''«Stichting Internet Domeinregistratie Nederland»'', SIDN
+* [http://www.sidn.nl/ Domenan registrirui sait (''sidn.nl'')] {{ref-nl}} {{ref-en}}
 * [http://iana.org/domains/root/db/nl.html IANA-informacii (''iana.org'').] {{ref-en}}
 
 {{CcTLD}}
