--- a/.zm.mw
+++ b/.zm.mw
@@ -2,6 +2,18 @@
 
 Domenan registratorile pidab olda internet-palakundanke Zambijas. [[.com]]-domen kävutase valdkundan territorijal paksumba.
 
+Domennimen registracii om lasktud koumandel tazopindal päiči eriližiš statjoiš (oz., Zambijan bank, järed internet-provaider). Kaik om 11 kahtenden tazopindan domenad:
+* '''ac.zm''' — akademižed aluzkundad
+* '''biz.zm''' — bizneskompanijad
+* '''co.zm''' i '''com.zm''' — kommertižed edheotandad
+* '''edu.zm''' — opendusen aluzkundad
+* '''gov.zm''' — valdkundaližed organad
+* '''info.zm''' — informacižed saitad
+* '''mil.zm''' — Zambijan armii
+* '''net.zm''' — kompjuterverkod
+* '''org.zm''' — kommertižetomad organizacijad
+* '''sch.zm''' — školad
+
 == Homaičendad ==
 <references/>
 
