--- a/Alžiran_flag.mw
+++ b/Alžiran_flag.mw
@@ -3,7 +3,9 @@
 
 Nügüdläine flag om vahvištadud [[1962]]-nden voden 3. päiväl heinkud. Alžiran Rahvahaližen Päzutandan Frontan flag om sen pojav, vaiše suruded oma toižed. Se partii vei Alžirad ripmatomuden tedotusennoks.
 
-Flag kogoneb kahtes püštoiktas šoiduspäi tazostadud levedusenke, vihandan i vauktan mujun. Rusktad tähtaz i pol'ku kuvadasoiš flagan keskuses. Vauged muju ozutab puhthut, [[islam]]an simvolad oma vihand muju i pol'ku.
+Flag kogoneb kahtes püštoiktas šoiduspäi tazostadud levedusenke, vihandan i vauktan mujun. Rusttad pol'ku i tähtaz sen südäimes kuvadasoiš flagan keskuses. Pol'kun suruz om flagan korktusen pol'. Vauged muju ozutab puhthut, [[islam]]an simvolad oma vihand muju i pol'ku.
+
+Kaks' ristikoitud vauktad jakkarid oma ližatud Alžiran sodameriflagan hurha üläčogaha.
 
 == Kacu mugažo ==
 * [[Alžiran valdkundznam]]
