--- a/Belokurih.mw
+++ b/Belokurih.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Belokurihan lidnanznam
  | Flag text = Belokurihan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 15,264
- | Voz' = 2017
+ | Eläjiden lugu = 15,128
+ | Voz' = 2021
  | Pind = 92.3
  | Fail = Белокуриха, Алтайский край. Вид на город 05.jpg
  | Pämez' = Konstantin Bazarov<br />(sulaku 2012—)
@@ -30,6 +30,15 @@ Belokurih om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 661 ristitud. Kaikiš suremb ristitišt om nügüd'.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Змеиный колодец, Алтайский край, город Белокуриха.jpg|Küiden kaiv (2015)
+Санаторий "Алтай-West" в вечерних огнях.jpg|«Altai-West»-sanatorii ehtal'žiš lämoiš vl 2016
+Радонолечебница №1 (Вид сбоку).jpg|Radonsanatorii vl 2012
+Скульптурная композиция "Der Kontrabass".jpg|Skul'pturine «Der Kontrabass»-kompozicii Züskindan ühtennimižen p'jesan mödhe (2019)
+Геокупол для пассажиров на посадочной площадке Белокуриха.jpg|Geokumpol passažiroiden täht ištutandlavudel Belokurihan lendimportas vl 2021
+</gallery>
 
 == Irdkosketused ==
 * [http://belokuriha-gorod.ru/ Municipaližen «Belokurih-lidn»-ühtnikan tobmuden aluzkundoiden sait (''belokuriha-gorod.ru'').] {{ref-ru}}
