--- a/Gornäk_(Altajan_rand).mw
+++ b/Gornäk_(Altajan_rand).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 12,972
  | Voz' = 2017
  | Pind = 28.09
- | Fail = 
+ | Fail = Gorod Gornyak.jpg
  | Pämez' = Lüdmila Volkova (sügüz'ku 2017—)
  | Telefonkod = +7-38586-xx-xxx
  | Avtokod = 22
