*Empty MediaWiki Message*

--- a/Belokurih.mw
+++ b/Belokurih.mw
@@ -34,7 +34,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 661 ristitud. K
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Змеиный колодец, Алтайский край, город Белокуриха.jpg|Küiden kaiv (2015)
-Санаторий "Алтай-West" в вечерних огнях.jpg|«Altai-West»-sanatorii ehtal'žiš lämoiš vl 2016
+Артековцам.jpg|«Altai-West»-sanatorijan nägu vl 2014
 Радонолечебница №1 (Вид сбоку).jpg|Radonsanatorii vl 2012
 Скульптурная композиция "Der Kontrabass".jpg|Skul'pturine «Der Kontrabass»-kompozicii Züskindan ühtennimižen p'jesan mödhe (2019)
 Геокупол для пассажиров на посадочной площадке Белокуриха.jpg|Geokumpol passažiroiden täht ištutandlavudel Belokurihan lendimportas vl 2021
