--- a/Jarovoje.mw
+++ b/Jarovoje.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 18,159
  | Voz' = 2017
  | Pind = 44.38
- | Fail = JarovoeCityAndJarovoeLake.jpg
+ | Fail = Яровое, лето, солнце 3.jpg
  | Pämez' = Vitalii Sambočii<br />(sulaku 2016—)
  | Telefonkod = +7-38568-xx-xxx
  | Avtokod = 22
@@ -27,9 +27,23 @@ Lidn sijadase Kulundan stepin zonas, solakahan Sur' Jarovoje-järven ({{lang-ru|
 Jarovoje om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 18 604 ristitud. Kaikiš suremb ristitišt oli 23 200 eläjad vl 1996. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] naižjumalankodi i jumalanpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 18 604 ristitud. Kaikiš suremb ristitišt oli 23 200 eläjad vl 1996.
 
-Jarovojen politehnine tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] naižjumalankodi i jumalanpert' oma olmas lidnas.
+
+Jarovojen politehnine tehnikum<ref>[http://yar-politeh.edu22.info/ Jarovojen politehnižen tehnikuman sait (''yar-politeh.edu22.info'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Музей истории города Яровое.jpg|Jarovoje-lidnan istorijan muzei (2015)
+Возле этнографического комплекса.jpg|Kalaidajiden rahvahiden «Altajan jurtad»-muzei-lauk, vn 2015 nägu
+JarovoeCityAndJarovoeLake.jpg|«Altaihimprom»-tegim i lidnan kül'bendrand Jarovoje-järven randal vl 2008
+В центре города Яровое.jpg|«Jarovoje-järv»-reduläžundkodi (2015)
+Биопарк города Яровое.jpg|Lidnan kul'turkeskuz (2015)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://yarovoe.org/ Lidnan tobmuden aluzkundoiden oficialine sait (''yarovoe.org'').] {{ref-ru}}
