--- a/Jarovoje.mw
+++ b/Jarovoje.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Jarovojen lidnanznam
  | Flag text = Jarovojen flag
  | Valdkund = Venäma
- | Eläjiden lugu = 18,159
- | Voz' = 2017
+ | Eläjiden lugu = 17,939
+ | Voz' = 2021
  | Pind = 44.38
  | Fail = Яровое, лето, солнце 3.jpg
- | Pämez' = Vitalii Sambočii<br />(sulaku 2016—)
+ | Pämez' = Vitalii Samobočii<br />(sulaku 2016—)
  | Telefonkod = +7-38568-xx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 (MSK+4)
@@ -46,7 +46,7 @@ JarovoeCityAndJarovoeLake.jpg|«Altaihimprom»-tegim i lidnan kül'bendrand Jaro
 <references />
 
 == Irdkosketused ==
-* [http://yarovoe.org/ Lidnan tobmuden aluzkundoiden oficialine sait (''yarovoe.org'').] {{ref-ru}}
+* [http://yarovoe22.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''yarovoe22.ru'').] {{ref-ru}}
 {{Commons|Category:Yarovoye}}
 
 {{Altajan randan lidnad}}
