--- a/Gornäk_(Altajan_rand).mw
+++ b/Gornäk_(Altajan_rand).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Gornäkan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 12,972
- | Voz' = 2017
+ | Eläjiden lugu = 12,115
+ | Voz' = 2021
  | Pind = 28.09
  | Fail = Gorod Gornyak.jpg
- | Pämez' = Lüdmila Volkova (sügüz'ku 2017—)
+ | Pämez' = Lüdmila Volkova<br />(sügüz'ku 2017—)
  | Telefonkod = +7-38586-xx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -19,7 +19,7 @@
 == Istorii ==
 Zolotuhan kaivuz om avaitud vspäi 1751. Vl 1942 panihe Gornäk-žilon alust otmaha kaivut kävutamižhe nügüdläižikš, ümbriradoihe äimetallišt kivendod. Vl 1946 kätihe Gornäkad lidnanvuiččeks žiloks, vl 1954 — rajonkeskuseks. Žilo sai lidnan statusad vl 1969.
 
-Lidn šingotihe Altajan kaivuzkombinatal (küllästamižfabrikal) vhesai 1998<ref>[http://gmz22.ru/about/ Istorine kuvakirjutuz. — Gornäkan mehanine tegim (''gmz22.ru'').] {{ref-ru}}</ref>, sadihe nenid metalloid: vas'k, cink, tin, hahktin, alüminii, kuld i hobed. Ližatoi tehmine roimahti kombinatad, i sen alusel avaitihe katilmašiništon mehaništ tegint. Mouckiventegim, leibtegim i omblendfabrik ratas lidnas mugažo.
+Gornäk-lidn šingotihe Altajan kaivuzkombinatal (küllästamižfabrikal) vhesai 1998<ref>[http://gmz22.ru/about/ Istorine kuvakirjutuz. — Gornäkan mehanine tegim (''gmz22.ru'').] {{ref-ru}}</ref>, sadihe nenid metalloid: vas'k, cink, tin, hahktin, alüminii, kuld i hobed. Ližatoi tehmine roimahti kombinatad, i sen alusel avaitihe katilmašiništon mehaništ tegint. Mouckiventegim, leibtegim i omblendfabrik ratas lidnas mugažo.
 
 == Geografijan andmused ==
 Lidn sijadase Zolotuh-jogen randal ({{lang-ru|Золотуха}}, Alein hura ližajogi, [[Ob'|Obin]] bassein), 270 m ü.m.t. keskmäižel korktusel. Matkad [[Kazahstan]]an röunhasai (Päivnouzmaiž-Kazahstanan agj) om 5 km suvipäivlaskmha avtotedme, [[Barnaul]]hasai — 300 km pohjoižpäivnouzmha orhal vai 360 km kaikil teil. Lähembaižed lidnad oma [[Zmeinogorsk]] 53 km pohjoižpäivnouzmha orhal vai 65 km avtol, [[Šemonaih]] (Kazahstan) 51 km suvipäivnouzmha orhal vai 86 km raudtedme i [[Rubcovsk]] 62 km lodeheze orhal vai 78 km trassadme.
