--- a/Belokurih.mw
+++ b/Belokurih.mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1803 kuti Novobelokurih-külä ({{lang-ru|деревня Новобелокуриха}}), nimitihe sijaližen penen Belokurih-jogen mödhe ([[Ob'|Obin]] bassein). 1920-nzil vozil šingotaškanzihe küläd kurortžiloks termaližiden [[radon|radonveden]] purtkiden (+30 i +42 C°) i ioniziruidud mägiil'man tagut.
 
-Vl 1982 žilo sai lidnan statusad. Oli lebutahoks kaiken Ühtištusen znamoičendanke vspäi 1970, om kurortan federaliženke znamoičendanke vspäi 1992. Läz 20 sanatorijad da pansionatad ratas lidnas, koume mägisuks'trassad om lattüd.
+Vl 1982 žilo sai lidnan statusad. Oli lebutahoks kaiken Ühtištusen znamoičendanke vspäi 1970, om kurortan federaliženke znamoičendanke vspäi 1992. Läz 20 sanatorijad da pansionatad ratas lidnas, koume [[suksed|mägisuks'trassad]] om lattüd.
 
 == Geografijan andmused ==
 Lidn sijadase 240..250 m ü.m.t. korktusil, [[Altajan mäged|Altajan]] ezimägištol, Cerkovk-mägen pautkenno. Matkad [[Barnaul]]hasai om 170 km lodeheze orhal vai 225 km avtotedme Bijskan kal't. Lähembaižed lidnad oma [[Bijsk]] (raudtevagzal) 65 km pohjoižhe orhal vai avtol i [[Gorno-Altaisk]] (lendimport) 67 km päivnouzmha orhal vai 116 km avtotedme.
@@ -31,6 +31,8 @@ Belokurih om lidnümbrikon üks'jäine eländpunkt.
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 661 ristitud. Kaikiš suremb ristitišt om nügüd'.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid<ref>[http://sobory.ru/geo/locat/13838 Belokurihan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> i kaks' časounäd oma olmas lidnas.
+
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Змеиный колодец, Алтайский край, город Белокуриха.jpg|Küiden kaiv (2015)
@@ -39,6 +41,9 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 661 ristitud. K
 Скульптурная композиция "Der Kontrabass".jpg|Skul'pturine «Der Kontrabass»-kompozicii Züskindan ühtennimižen p'jesan mödhe (2019)
 Геокупол для пассажиров на посадочной площадке Белокуриха.jpg|Geokumpol passažiroiden täht ištutandlavudel Belokurihan lendimportas vl 2021
 </gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://belokuriha-gorod.ru/ Municipaližen «Belokurih-lidn»-ühtnikan tobmuden aluzkundoiden sait (''belokuriha-gorod.ru'').] {{ref-ru}}
