--- a/Aleisk.mw
+++ b/Aleisk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Alejskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 28,735
- | Voz' = 2017
+ | Eläjiden lugu = 28,434
+ | Voz' = 2021
  | Pind = 43.87
  | Fail = Алейск. Малопанюшево..jpg
  | Pämez' = Ivan Maskaev<br />(viluku 2017—)
@@ -17,20 +17,27 @@
 '''Aleisk''' ({{lang-ru|Алейск}}) om [[Venäma]]n lidn da lidnümbrik [[Altajan rand]]an keskuses. Se om [[Aleiskan rajon]]an administrativižeks keskuseks mugažo, ei mülü rajonha.
 
 == Istorii ==
-Eländpunktan aluz om pandud [[Turksib]]an ''žiloks Aleiskai-raudtestancijanno'' ({{lang-ru|Алейская}}) vl 1913. Oli lidnanvuiččeks Aleisk-žiloks vozil 1926−1938. Vn 1939 vilukuspäi om lidnan statusanke. Lidn šingotase järedan maižanduzrajonan sömtegimištol: jauh, surimed, pühävoi, mugažo lihakombinat i voisagudkombinat ratas, i tehtas kombisömäd živatoiden täht.
+Eländpunktan aluz om pandud [[Turksib]]an ''žiloks Aleiskai-raudtestancijanno'' ({{lang-ru|Алейская}}) vl 1913. Oli lidnanvuiččeks Aleisk-žiloks vozil 1926−1938. Vn 1939 vilukuspäi om lidnan statusanke.
+
+Aleisk šingotase järedan maižanduzrajonan sömtegimištol: jauh, surimed, pühävoi, mugažo lihakombinat i voisagudkombinat ratas, i tehtas kombisömäd živatoiden täht.
 
 == Geografijan andmused ==
-Lidn sijadase Alei-jogen hural randal ({{lang-ru|Алей}}, [[Ob'|Obin]] hura ližajogi), 170 m ü.m.t. keskmäižel korktusel. Matkad lähembaižhe [[Barnaul]]-lidnhasai om 125 km pohjoižpäivnouzmha kaikil teil. «Barnaul — [[Rubcovsk]] — [[Semei]]»-raudtejono läbitab lidnad.
+Lidn sijadase Alei-jogen hural randal ({{lang-ru|Алей}}, [[Ob'|Obin]] hura ližajogi), 170 m ü.m.t. keskmäižel korktusel. Matkad lähembaižhe [[Barnaul]]-lidnhasai om 125 km pohjoižpäivnouzmha kaikil teil. «Barnaul — [[Rubcovsk]] — [[Semei]]»-raudtekeskust läbitab lidnad.
 
 Aleisk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 29 510 ristitud. Vspäi 1959 lidnan ristitišt vajehtab 28..31 tuhad röunoiš, kaikiš suremb ristitišt oli 32 487 eläjad vl 1970. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid i mez'jumalankodi oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 29 510 ristitud. Vspäi 1959 lidnan ristitišt vajehtab 28..31 tuhad röunoiš, kaikiš suremb ristitišt oli 32 487 eläjad vl 1970.
 
-Aleiskan tehnologine tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid<ref>[http://sobory.ru/geo/locat/17056 Aleiskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> i mez'jumalankodi oma olmas lidnas.
+
+Aleiskan tehnologine tehnikum<ref>[http://profatt.edu22.info/ Aleiskan tehnologižen tehnikuman sait (''profatt.edu22.info'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://aleysk22.su/ Municipaližen «Aleisk-lidn»-ühtnikan tobmuden aluzkundoiden sait (''aleysk22.su'').] {{ref-ru}}
+* [http://aleysk22.ru/ Municipaližen «Aleisk-lidn»-ühtnikan tobmuden aluzkundoiden sait (''aleysk22.ru'').] {{ref-ru}}
 {{Commons|Category:Aleysk}}
 
 {{Altajan randan lidnad}}
