--- a/Bijsk.mw
+++ b/Bijsk.mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Bijskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 201,914
- | Voz' = 2018
- | Pind =
- | Fail = Biysk - Sovetskaya Street.JPG
+ | Eläjiden lugu = 198,433
+ | Voz' = 2021
+ | Pind = 291,67
+ | Fail = Biysk225.jpg
  | Pämez' = Aleksandr Studenikin<br />(kezaku 2017—)
  | Telefonkod = +7-3854-xxx-xxx
  | Avtokod = 22
@@ -27,7 +27,21 @@ Lidn sijadase Bii-jogen randoil ({{lang-ru|Бия}}, [[Obinjogi|Obin]] oiged jog
 Nell' žilod mülüdas lidnümbrikho Bijskan ližaks. Lidnümbrikon pind — 291,67 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 210 115 ristitud, lidnümbrikon — 219 328 ristitud. Kaikiš suremb lidnan ristitišt oli 230..235 tuhad eläjid vozil 1987−1994 (235 tuh. rist. vll 1991−1992). Vl 2018 kaik 211 612 ristitud elihe lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 210 115 ristitud, lidnümbrikon — 219 328 ristitud. Kaikiš suremb lidnan ristitišt oli 230..235 tuhad eläjid vozil 1987−1994 (235 tuh. rist. vll 1991−1992). Vl 2018 kaik 201 914 ristitud elihe lidnas i 211 612 ristitud kaikes lidnümbrikos.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Tulips near Biysk local authority building.jpg|Bijskan tobmuden aluzkundoiden sauvuz (2013)
+Советская 4.JPG|Rosreestr:an palakund i «Randevu»-kafe (2015, ende Gilev-torgovanan torguindkodi)
+Успенский кафедральный собор (г. Бийск)-2.JPG|Pühän Jumalanmaman Emäganpäivän kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2013 nägu
+EvalarOffice.JPG|Farmaceftižen «Evalar»-kompanijan tegimištoline kompleks vl 2005
+Biysk-bti.jpg|Bijskan tehnologine institut, ühtenz' openduzkorpus (2008)
+Biysk - Sovetskaya Street.JPG|Lidnan dramteatr om oiktalpäi (2006)
+Бийск ГДК.jpg|Lidnan kul'turkeskuz (2012)
+Biysk-ab-0003.JPG|Planetarii — Lapsiden tehnižen sädamižen pert' (2008)
+Brp-cargo.jpg|Jüguport Bii-jogen randal vl 2012
+Biysk-Railroad-Station.jpg|Bijsk-päraudtestancijan sauvuz vl 2010
+</gallery>
 
 == Irdkosketused ==
 * [http://www.biysk22.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''biysk22.ru'' vai ''бийск.рф'').] {{ref-ru}}
@@ -41,3 +55,4 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 210 115 ris
 [[Kategorii:Altajan randan lidnad]]
 [[Kategorii:Bijskan rajon|*]]
 [[Kategorii:Altajan randan lidnümbrikod]]
+[[Kategorii:Tedolidnad]]
