--- a/Mägi.mw
+++ b/Mägi.mw
@@ -14,6 +14,11 @@ Jagadas mägid korktusen mödhe:
 * keskmäižed, relätivižen korktusen 0,8..2 km i 1..3 km absolütižen;
 * madalad, niiden relätivine korktuz om 500..800 metrad, absolütižikš tuhaze metrhasai kortte.
 
+== Mägehe sidodud vepsän ozoitez ==
+<blockquote>
+* Ivoi itkeb mägen päs (tohuz palab).
+</blockquote>
+
 == Homaičendad ==
 <references />
 
