--- a/Mez'.mw
+++ b/Mez'.mw
@@ -14,6 +14,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 == Meheze sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
+* ''Kala ecib süvemban, a mez' paremban.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 </blockquote>
 
