--- a/Pä.mw
+++ b/Pä.mw
@@ -24,6 +24,11 @@ Südäimižed:
 * [[oc]]
 * hibused modos — [[habinod]], [[bard (hibused)|bard]], [[bakid]], [[kulmad]], [[ripsud]], [[octukad]], [[pleš]]
 
+== Pähä sidodud vepsän muštatiž ==
+<blockquote>
+* ''Ülemba päd korvad ei kazgoi.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Ristitun hibj]]
 
