/* Pähä sidodud vepsän muštatiž */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -24,8 +24,9 @@ Südäimižed:
 * [[oc]]
 * hibused modos — [[habinod]], [[bard (hibused)|bard]], [[bakid]], [[kulmad]], [[ripsud]], [[octukad]], [[pleš]]
 
-== Pähä sidodud vepsän muštatiž ==
+== Pähä sidodud vepsän muštatišed ==
 <blockquote>
+* ''Kažita hired i pän södas.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
 
