/* Pähä sidodud vepsän muštatišed */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -27,6 +27,7 @@ Südäimižed:
 == Pähä sidodud vepsän muštatišed ==
 <blockquote>
 * ''Kažita hired i pän södas.''
+* ''Kelel päd ed söta.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
 
