--- a/Mezi.mw
+++ b/Mezi.mw
@@ -22,6 +22,11 @@ Mezi om bakterijan- i senüdenvastaine. Effektivine abutuz spravitamha satatesid
 
 [[Allergii]] oleskeleb erasil ristituil meden ližadusidenke taguiči.
 
+== Medehe sidotud vepsän muštatiž ==
+<blockquote>
+* ''Kelen päl om met, a kelen al — jäd.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
