--- a/Tedo.mw
+++ b/Tedo.mw
@@ -14,6 +14,11 @@ Avar tedo mülütab töhišton kaikid arvoimižid da komponentid:
 * tärtusiden da kategorijoiden apparat;
 * informacijan kogodamižen, kaičendan da kävutandan sistem.
 
+== Tedoho sidodud vepsän muštatiž ==
+<blockquote>
+* ''Keletoi kaikiš enamban tedab.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
