/* Kezaha sidotud vepsän muštatišed */ +

--- a/Keza.mw
+++ b/Keza.mw
@@ -6,6 +6,7 @@ Koume kud mülüdas kezha: Pohjoižes mapoliškos — [[kezaku]], [[heinku]] da 
 
 == Kezaha sidotud vepsän muštatišed ==
 <blockquote>
+* ''Keza keradab, a tal'v söb.''
 * ''Keza tal'veks radab, a tal'v kezaks.''
 * ''Kezal jügedemba radad, tal'vel kebnemba eläd.''
 * ''Kezal kaikutte kuz'haine pästab öks.''
