--- a/Tal'v.mw
+++ b/Tal'v.mw
@@ -6,6 +6,7 @@ Koume kud mülüb sihe — [[tal'vku]], [[viluku]] da [[uhoku]].
 
 == Tal'vhe sidodud vepsän muštatišed ==
 <blockquote>
+* ''Keza keradab, a tal'v söb.''
 * ''Keza tal'veks radab, a tal'v kezaks.''
 * ''Kezal jügedemba radad, tal'vel kebnemba eläd.''
 * ''[[Miklanpei]] mäni, tal'v zavodiše.''
