/* Sömhä sidotud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -17,6 +17,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Heimod om äi, söda ei kus.''
 * ''Kelel päd ed söta.''
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
+* ''Keza keradab, a tal'v söb.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
