/* Pähä sidodud vepsän muštatišed */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -28,6 +28,7 @@ Südäimižed:
 <blockquote>
 * ''Kažita hired i pän södas.''
 * ''Kelel päd ed söta.''
+* ''Pän kibištab, perskele kebnemb om.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
 
