Replacing Wappen_der_Stadt_Düren.svg with [[File:DEU_Dueren_COA.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set) · standardization according to [[:c::d

--- a/Düren.mw
+++ b/Düren.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Düren
- | Lidnanznam = Wappen der Stadt Düren.svg
+ | Lidnanznam = DEU Dueren COA.svg
  | Flag = Flagge der Stadt Düren.svg
  | Lidnanznam text = Dürenan lidnanznam
  | Flag text = Dürenan flag
