--- a/Barnaul.mw
+++ b/Barnaul.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Barnaul<br />Барнаул
- | Lidnanznam = Barnaul coat of arms.svg
+ | Lidnanznam = Герб Барнаула.jpg
  | Flag = Flag of Barnaul.svg
  | Lidnanznam text = Barnaulan lidnanznam
  | Flag text = Barnaulan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 633,301
- | Voz' = 2017
+ | Eläjiden lugu = 631,124
+ | Voz' = 2021
  | Pind = 322.01
  | Fail = Barnaul Skyline 2007.jpg
- | Pämez' = Sergei Dugin (2015—)
+ | Pämez' = Väčeslav Frank<br />(uhoku 2020—)
  | Telefonkod = +7-3852-xxx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -27,17 +27,33 @@
 == Geografijan andmused ==
 Lidn sijadase [[Ob'|Ob'-jogen]] randoil, hural randal tobjimalaz. Lähembaižed toižed sured lidnad oma [[Novosibirsk]] 240 km pohjoižhe (avtotedme vai raudtedme) i [[Novokuzneck]] 227 km päivnouzmha orhal (raudtedme).
 
-Barnaul jagase vidhe administrativiž-territorialižhe rajonha. Ičeze administracii om kaikuččes, no rajonad ei olgoi municipaližikš ühtnikoikš, Dum om üks'jäine lidnas. 1 lidnanvuitte žilo (Suvine-žilo, 20 028 rist. vl 2016) i 24 muite žilod, žilod raudtestancijanno da küläd mülüdas lidnümbrikho Barnaulan ližaks, kaik ned sijadasoiš päivlaskmha lidnaspäi.
+Barnaul jagase videks administrativiž-territorialižeks rajonaks. Ičeze administracii om kaikuččes, no rajonad ei olgoi municipaližikš ühtnikoikš, Dum om üks'jäine lidnas. Üks' lidnanvuitte žilo (Suvine-žilo, 20 028 rist. vl 2016) i 24 muite žilod, žilod raudtestancijanno da küläd mülüdas lidnümbrikho Barnaulan ližaks, kaik ned sijadasoiš päivlaskmha lidnaspäi.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen satusiden mödhe Barnaul-lidnan eläjiden lugu oli 612 401 ristitud, lidnümbrikon — 670 332 ristitud. Kaikiš suremb lidnan ristitišt oli vozil 2004 i 2015-2016 — 635 tuhad eläjid.
+Vn 2010 Venäman rahvahanlugemižen satusiden mödhe Barnaul-lidnan eläjiden lugu oli 612 401 ristitud, lidnümbrikon — 670 332 ristitud. Kaikiš suremb lidnan ristitišt oli 635 tuhad eläjid vozil 2004 i 2015-2016.
+
+Edeline lidnan pämez' om Sergei Dugin (tal'vku 2015 — eloku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Barnaul City Duma.jpg|Lidnan Duman sauvuz (2007)
+Отделение по Алтайскому краю Сибирского главного управления Центрального банка РФ.jpg|Venäman Keskuzbankan palakund Altajan randadme (2016)
+Barnaul ProtectionTheotokosChurch 012 9449.jpg|Pühän Jumalanmaman Katken kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2021 nägu (om saudud vll 1898−1903)
+Barnaulstankostroi.jpg|Barnaulan tömašintegim vl 2007 (pästab patronid päpaloin)
+AsuBarnaul1.JPG|Altajan valdkundaline universitet, L- i M-sauvused (2010)
+Altai Drama Theatre.jpg|Altajan randan dramteatr V. Šukšinan nimed (2007)
+Sakharov's Square in Barnaul.JPG|«Ob'»-bassein (keskuses) i Kacmižiden da sportan pert'kulu (oiktalpäi) Saharovan torgul vl 2007
+Barnaul (BAX - UNBB) AN2308407.jpg|Barnaul-lendimportan terminal vl 2013
+Barnaul RiverPort 012 8989.jpg|Jogistancii vl 2021
+Вокзал станции Барнаул.jpg|Barnaul-päraudtestancii vl 2015
+</gallery>
 
 == Tetabad ristitud ==
 ;Sündnuded
-* [[Nikol'skaja-Ekseli Anna|Anna Nikol'skaja-Ekseli]] (sünd. 1979) – Venäman lapsidenkirjutainaine.
+* [[Nikol'skaja-Ekseli Anna|Anna Nikol'skaja-Ekseli]] (sünd. 1979) — Venäman lapsidenkirjutainaine.
 ;Elanuded
-* [[Evdokimov Mihail|Mihail Evdokimov]] (1957-2005) – oli Venäman parodist da politikanmez'.
-* [[Polzunov Ivan|Ivan Polzunov]] (1728-1766) – Venäman ezmäižen [[purumašin]]an melestegii.
+* [[Evdokimov Mihail|Mihail Evdokimov]] (1957−2005) — oli Venäman parodist da politikanmez'.
+* [[Polzunov Ivan|Ivan Polzunov]] (1728−1766) — Venäman ezmäižen [[purumašin]]an melestegii.
 
 == Homaičendad ==
 <references />
