--- a/Zmeinogorsk.mw
+++ b/Zmeinogorsk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Zmeinogorsk<br />Змеиногорск
- | Lidnanznam = Zmeinogorsk Coat of Arms.jpg
+ | Lidnanznam = Zmeinogorsk COA (2012).gif
  | Flag = 
  | Lidnanznam text = Zmeinogorskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 10,575
- | Voz' = 2017
- | Pind = 32.6
- | Fail = Филиал Краеведческого музея в городе Змеиногорске.jpg
- | Pämez' = Viktor Prokin<br />(reduku 2013—)
+ | Eläjiden lugu = 10,187
+ | Voz' = 2021
+ | Pind = 34.06
+ | Fail = Магазин купца Колесова (Змеиногорск).jpg
+ | Pämez' = Eduard Savinov<br />(reduku 2018—)
  | Telefonkod = +7-38587-xx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 (MSK+4)
@@ -17,7 +17,9 @@
 '''Zmeinogorsk''' ({{lang-ru|Змеиногорск}}) om [[Venäma]]n lidn da lidnankund [[Altajan rand]]an suves. Se om [[Zmeinogorskan rajon]]an administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1736 kuti žilo samha [[kuld]]ad da [[hobed]]ad. Vl 1757 lidnuz oli saudud varjoičemha sadud metalloid. Vozil 1941−1997 saihe äimetallišt kivendod. Žilo sai lidnan statusad vl 1952. Edel 2008 vot oli lidnümbrikoks, rajon eriži. Lidn šingotihe küllästamižfabrikal, juvelirfabrikal i likör-vodkan tegimel, nügüd' om eländsijaks rajonan kaivuziden radnikoiden täht.
+Eländpunktan aluz om pandud vl 1736 kuti žilo samha [[kuld]]ad da [[hobed]]ad. Vl 1757 lidnuz oli saudud varjoičemha sadud metalloid. Vozil 1941−1997 saihe äimetallišt kivendod. Žilo sai lidnan statusad vl 1952. Edel 2008. vot oli lidnümbrikoks, rajon eriži.
+
+Zmeinogorsk šingotihe küllästamižfabrikal, juvelirfabrikal i likör-vodkan tegimel, nügüd' om eländsijaks rajonan kaivuziden radnikoiden täht.
 
 == Geografijan andmused ==
 Lidn sijadase Alei-jogen üläbasseinas, 450 m ü.m.t. keskmäižel korktusel. Matkad [[Barnaul]]hasai om 360 km pohjoižpäivnouzmha. Lähembaine lidn om [[Gornäk (Altajan rand)|Gornäk]] 53 km suvipäivlaskmha orhal vai 65 km avtol.
@@ -25,7 +27,17 @@ Lidn sijadase Alei-jogen üläbasseinas, 450 m ü.m.t. keskmäižel korktusel. M
 Lazurk-žilo ({{lang-ru|село Лазурка}}, 169 rist. vl 2016, 25 km lidnaspäi) mülüb lidnankundha Zmeinogorskan ližaks. Lidnankundan pind — 33,38 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 955 ristitud, lidnankundan — 11 155 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 13 774 eläjad vl 1959. Vl 2017 kaik 10 739 ristitud elädas lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 955 ristitud, lidnankundan — 11 155 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 13 774 eläjad vl 1959. Vl 2017 kaik 10 575 ristitud elihe lidnas i 10 739 ristitud kaikes lidnankundas.
+
+Edeline lidnan pämez' om Viktor Prokin (reduku 2013 — reduku 2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Филиал Краеведческого музея в городе Змеиногорске.jpg|Kaivuztehmišton šingotesen istorijan muzei Akinfii Demidovan nimed (2012)
+Zmieinogorsk.JPG|Muštnik pölištunuzile sodamehile (2013)
+Ликеро-водочный завод (Змеиногорск).jpg|Liköran da vodkan tegim vl 2011
+P1150022р.JPG|Lapsiden čomamahtoine škol (2013, ende Bergamt-kaivuden kontor)
+</gallery>
 
 == Irdkosketused ==
 * [http://администрация-города-змеиногорска.рф/ Municipaližen ühtnikan tobmuden aluzkundoiden sait (''администрация-города-змеиногорска.рф'').] {{ref-ru}}
