--- a/Zmeinogorsk.mw
+++ b/Zmeinogorsk.mw
@@ -7,7 +7,7 @@
  | Valdkund = Venäma
  | Eläjiden lugu = 10,187
  | Voz' = 2021
- | Pind = 34.06
+ | Pind = 32.6<ref>[https://www.altairegion22.ru/territory/regions/zmeinogorsk/ Zmeinogorsk Altajan randal oficialižel ''altairegion22.ru''-saital.] {{ref-ru}}</ref>
  | Fail = Магазин купца Колесова (Змеиногорск).jpg
  | Pämez' = Eduard Savinov<br />(reduku 2018—)
  | Telefonkod = +7-38587-xx-xxx
@@ -38,6 +38,9 @@ Zmieinogorsk.JPG|Muštnik pölištunuzile sodamehile (2013)
 Ликеро-водочный завод (Змеиногорск).jpg|Liköran da vodkan tegim vl 2011
 P1150022р.JPG|Lapsiden čomamahtoine škol (2013, ende Bergamt-kaivuden kontor)
 </gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://администрация-города-змеиногорска.рф/ Municipaližen ühtnikan tobmuden aluzkundoiden sait (''администрация-города-змеиногорска.рф'').] {{ref-ru}}
